apps/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: default
spec:
  selector:
    app: gitlab
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: ssh
    port: 22
    targetPort: 22
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: gitlab
  ports:
  - name: ssh
    port: 22
    targetPort: 22
    nodePort: 30022
